--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     
 
                     <section>
-                        ¿Te gusta el flow de Rauw Alejandro? Entonces esta página es para vos.
-                        Acá vas a encontrar todo sobre su música, sus álbumes, sus mejores canciones y un poco de su historia.
+                         ¿Te gusta el flow de Rauw Alejandro? Entonces esta página es para ti.
+                        Acá encontraras todo sobre su música, sus álbumes, sus mejores canciones y un poco de su historia.
                         Inspirada en el estilo de Vice Versa, esta web mezcla reggaetón, estilo y ese toque futurista que hace único a Rauw.
                         ¡Explorá, escuchá y disfrutá del viaje!
             
