--- a/albumes.html
+++ b/albumes.html
@@ -32,11 +32,33 @@
                     </nav>
                     
                    <section class="album">
-                      <h2>Afrodisiaco (2020)</h2>
-                      <a href="https://open.spotify.com/album/3fq06DDIkadDRB9RuBb22v" target="_blank">
-                        <img src="imagenes/afrosiaco.jpg" alt="Afrodisiaco" style="width: 150px; height: auto;">
-                     </a>
-                   </section>
+                        <h2>Afrodisiaco (2020)</h2>
+                        <a href="https://open.spotify.com/album/3fq06DDIkadDRB9RuBb22v" target="_blank">
+                           <img src="imagenes/afrosiaco.jpg" alt="Afrodisiaco" style="width: 150px; height: auto;">
+                       </a>
+                       <p>
+                         <h3>Tracklist</h3>
+                         <ul>
+                             <li>Dile a Él</li>
+                             <li>Strawberry Kiwi</li>
+                             <li>Mood</li>
+                             <li>Química</li>
+                             <li>Enchule</li>
+                             <li>De Cora</li>
+                             <li>Un Sueño</li>
+                             <li>Reloj</li>
+                             <li>No te Creo</li>
+                             <li>Soy una Gárgola</li>
+                             <li>Pensándote</li>
+                             <li>Perreo Pesao'</li>
+                             <li>Algo Mágico</li>
+                             <li>Elegí</li>
+                             <li>Tattoo - Remix</li>
+                          </ul>
+                       </p>
+
+                </section>
+
 
 
                     <section class="album">
