--- a/albumes.html
+++ b/albumes.html
@@ -66,6 +66,24 @@
                       <a href="https://open.spotify.com/album/2Nt6MDJXfoxQ22tIQgWXIh" target="_blank">
                         <img src="imagenes/rauw.jpg" alt="Viceversa" style="width: 150px; height: auto;">
                       </a>
+                      <p>
+                         <h3>Tracklist</h3>
+                         <ul>
+                             <li>Todo De Ti</li>
+                             <li>Sexo Virtual</li>
+                             <li>Nubes</li>
+                             <li>Desesperados</li>
+                             <li>2/Catorce</li>
+                             <li>Aquel Nap ZzZz</li>
+                             <li>Curame</li>
+                             <li>Cosa Guapa</li>
+                             <li>Desenfocao'</li>
+                             <li>¿Cuando Fue?</li>
+                             <li>La Old Skul</li>
+                             <li>Tengo un Pal</li>
+                             <li>Brazilera</li>
+                          </ul>
+                       </p>
                     </section>
 
                     <section class="album">
@@ -73,6 +91,29 @@
                        <a href="https://open.spotify.com/album/5AcRssiG0Zqu3lqYW7hMoM" target="_blank">
                         <img src="imagenes/saturno.jpg" alt="Saturno" style="width: 150px; height: auto;">
                       </a>
+                       <p>
+                         <h3>Tracklist</h3>
+                         <ul>
+                             <li>SATURNO</li>
+                             <li>PUNTO 40</li>
+                             <li>MAS DE UNA VEZ</li>
+                             <li>LEJOS DEL CIELO</li>
+                             <li>DEJAU'</li>
+                             <li>GATAS</li>
+                             <li>PANTIES Y BRASIERES</li>
+                             <li>CAZADORES</li>
+                             <li>DECA'A LAS VEGAS</li>
+                             <li>QUÉ RICO CH**GAMOS</li>
+                             <li>RON COLA</li>
+                             <li>NO ME SUELTES</li>
+                             <li>VERDE MENTA</li>
+                             <li>CORAZON DESPEINADO</li>
+                             <li>DIME QUIEN????</li>
+                             <li>RAULEETO</li>
+                             <li>DE CAROLINA</li>
+                             <li>LOKERA</li>
+                          </ul>
+                       </p>
                     </section>
 
                     <section class="album">
@@ -80,6 +121,30 @@
                      <a href="https://open.spotify.com/album/0aX0UXrHG2ceYIxTQcqJdA" target="_blank">
                         <img src="imagenes/cosanuestra.jpg" alt="cosanuestra" style="width: 150px; height: auto;">
                       </a>
+                       <p>
+                         <h3>Tracklist</h3>
+                         <ul>
+                             <li>Cosa Nuestra</li>
+                             <li>Dejame Entrar</li>
+                             <li>Que Pasaria...</li>
+                             <li>Tu Con El</li>
+                             <li>Committed</li>
+                             <li>Espresso Martini</li>
+                             <li>Baja Pa'Aca'</li>
+                             <li>Ni Me Conozco</li>
+                             <li>IL Capo</li>
+                             <li>Revolú</li>
+                             <li>Mil mujeres</li>
+                             <li>Khé?</li>
+                             <li>Pasaporte</li>
+                             <li>Se Fue</li>
+                             <li>Pasaporte</li>
+                             <li>Touching The Sky</li>
+                             <li>Amar De Nuevo</li>
+                             <li>2:12 AM</li>
+                             <li>SEXXXMACHINE</li>
+                          </ul>
+                       </p>
                      
                     </section>
     
