--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="style.css">
+ <meta property="og.image" content="https://github.com/Fer300309/Proyecto-1/blob/main/imagenes/logo.jpg">
  <title>Fer</title>  
 
 
