--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
  <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="style.css">
- <meta property="og.image" content="https://github.com/Fer300309/Proyecto-1/blob/main/imagenes/logo.jpg">
- <title>Fer</title>  
+ <meta property="og.image" content=" imágenes
+/logotipo.jpg">
+ <title>Rauw Alejandro</title>  
 
 
  </head>
@@ -47,3 +48,4 @@
     </body>
  
  </html>
+
