--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
  <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="style.css">
- <meta property="og.image" content=" imágenes
-/logotipo.jpg">
+ <meta property="og.image" content="imagenes/logo.jpg">
  <title>Rauw Alejandro</title>  
 
 
@@ -48,4 +47,5 @@
     </body>
  
  </html>
+
 
