--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="style.css">
- <meta property="og.image" content="imagenes/logo.jpg">
+<meta property="og.image" content="imagenes/rauw.jpg">
  <title>Rauw Alejandro</title>  
 
 
@@ -47,5 +47,6 @@
     </body>
  
  </html>
+
 
 
