--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="style.css">
-<meta property="og.image" content="imagenes/rauw.jpg">
+<meta property="og:image" content="imagenes/rauw.jpg">
+ <meta property="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <title>Rauw Alejandro</title>  
 
 
@@ -47,6 +48,7 @@
     </body>
  
  </html>
+
 
 
 
