--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html lang="es">
  <head>
  <meta charset="UTF-8">
-<meta property="og:image" content="imagenes/rauw.jpg">
+<meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta property="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <meta property="og:title" content="Fernando Yalibat/ Disñador Web">
  <title>Rauw Alejandro</title>  
@@ -48,6 +48,7 @@
     </body>
  
  </html>
+
 
 
 
