--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
  <html lang="es">
  <head>
+  <link rel="stylesheet" href="style.css">
  <meta charset="UTF-8">
 <meta property="og:image" content="imagenes/tiroteo.jpg">
 <meta property="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
@@ -48,6 +49,7 @@
     </body>
  
  </html>
+
 
 
 
