--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta charset="UTF-8">
 <meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta property="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
- <meta name="description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+ <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <title>Rauw Alejandro</title>  
 
 
@@ -49,6 +49,7 @@
     </body>
  
  </html>
+
 
 
 
