--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
  <html lang="es">
  <head>
-  <link rel="stylesheet" href="style.css">
  <meta charset="UTF-8">
-<meta property="og:image" content="imagenes/tiroteo.jpg">
- <meta property="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="imagenes/logo.jpg">
+ <link rel="stylesheet" href="style.css">
+ <meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+ <meta property="og:title" content="Fernando Yalibat/ Disñador Web">
  <title>Rauw Alejandro</title>  
 
 
@@ -49,6 +51,7 @@
     </body>
  
  </html>
+
 
 
 
