--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="imagenes/logo.jpg">
+  <link rel="shortcut icon" href="imagenes/logo.jpg">
  <link rel="stylesheet" href="style.css">
  <meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
@@ -51,6 +51,7 @@
     </body>
  
  </html>
+
 
 
 
