--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
  <html lang="es">
  <head>
  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="imagenes/logo.jpg">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="imagenes/logo.jpg">
  <link rel="stylesheet" href="style.css">
+ <meta name="description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <meta property="og:image" content="imagenes/tiroteo.jpg">
- <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+ <meta property="og:description" content="Bienvenidos">
  <meta property="og:title" content="Fernando Yalibat/ Disñador Web">
  <title>Rauw Alejandro</title>  
 
@@ -51,6 +52,7 @@
     </body>
  
  </html>
+
 
 
 
