--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="imagenes/logo.jpg">
  <link rel="stylesheet" href="style.css">
- <meta name="description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+ <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta property="og:description" content="Bienvenidos">
  <meta property="og:title" content="Fernando Yalibat/ Disñador Web">
@@ -52,6 +52,7 @@
     </body>
  
  </html>
+
 
 
 
