--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
  <html lang="es">
  <head>
- <meta charset="UTF-8">
+<meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="imagenes/logo.jpg">
+ <link rel="shortcut icon" href="imagenes/logo.jpg">
+ <title>Mundo Rauw</title> 
  <link rel="stylesheet" href="style.css">
- <meta name="og:description" content="Esta es una Pagina dedicada a Rauw Alejadro">
+ <meta name="description" content="Esta es una Pagina dedicada a Rauw Alejadro">
  <meta property="og:image" content="imagenes/tiroteo.jpg">
  <meta property="og:description" content="Bienvenidos">
  <meta property="og:title" content="Fernando Yalibat/ Disñador Web">
- <title>Rauw Alejandro</title>  
 
 
  </head>
@@ -52,6 +52,7 @@
     </body>
  
  </html>
+
 
 
 
